--- a/Google_tests/CMakeLists.txt
+++ b/Google_tests/CMakeLists.txt
@@ -1,11 +1,15 @@
+# 'Google_test' is the subproject name
 project(Google_tests)
-add_subdirectory(lib)
-include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
 
-# adding the Google_Tests_run target
-add_executable(Google_Tests_run test.cpp)
+# 'lib' is the folder with Google Test sources
+add_subdirectory(../Google_tests/lib)
+#include_directories(${gtest_SOURCE_DIR}/include ${gtest_SOURCE_DIR})
+include_directories(../Google_tests/lib/googletest/include)
 
-# linking Google_Tests_run with DateConverter_lib which will be tested
-#target_link_libraries(Google_Tests_run src)
+# 'Google_Tests_run' is the target name
+# 'test1.cpp tests2.cpp' are source files with tests
+add_executable(Google_Tests_run tests.cpp)
+
+target_link_libraries(Google_Tests_run s21_matrix_oop.a)
 
 target_link_libraries(Google_Tests_run gtest gtest_main)
