--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-project(s21_matrix_oop.a)
+project(s21_matrix_oop)
 
 set(CMAKE_CXX_STANDARD 14)
 
@@ -19,8 +19,8 @@ set(SOURCE_FILES
         s21_matrix_oop.cpp
         )
 
-add_executable(s21_matrix_cpp
-        s21_matrix_oop.cpp
-        s21_matrix_oop.h)
+#add_executable(s21_matrix_cpp
+#        s21_matrix_oop.cpp
+#        s21_matrix_oop.h)
 
-add_library(s21_matrix_oop.a STATIC ${SOURCE_FILES} ${HEADER_FILES})
+add_library(s21_matrix_oop STATIC ${SOURCE_FILES} ${HEADER_FILES})
