--- a/src/Makefile
+++ b/src/Makefile
@@ -38,7 +38,7 @@ test: s21_matrix_oop.a
 rebuild: clean all
 
 gcov_report: s21_matrix_oop.a
-	$(CC) $(CFLAGS) $(GCOV_LIBS) $(TEST_SOURSE) $(SOURCES) $(LIBA) -L. $(LIBA) $(TST_LIBS) $(LIB_TEST) $(LIBFLAGS) -o $(BUILD_PATH)$(EXE)
+	$(CC) $(CFLAGS) $(GCOV_LIBS) $(TEST_SOURSE) $(SOURCES) $(LIBA) -L. $(LIBA)  $(LIBFLAGS) -o $(BUILD_PATH)$(EXE)
 	$(BUILD_PATH)$(EXE)
 	lcov -t "test" -c -d  $(BUILD_PATH)  --no-external --output-file $(BUILD_PATH)coverage.info
 	genhtml $(BUILD_PATH)coverage.info --output-directory $(BUILD_PATH)report/
